Switched to name attr for checkbox instead of id

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     </body>
 
     <form action="/control" method="GET">
-        <input type="checkbox" id="motion_cb" value="motion"> 
+        <input type="checkbox" name="motion_cb" value="motion"> 
     </form>
 
 </html>
