Switched radiobuttons for checkbox

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,8 @@
     </body>
 
     <form action="/control" method="POST">
-        <input type="checkbox" name="motion_cb" value="motion"> 
+        <input type="radio" name="alerts" value="Alerts"> Alerts<br> 
+        <input type="radio" name="alerts" value="No Alerts" checked> No Alerts<br> 
         <input type="submit">
     </form>
 
