Added a <br> after page title

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,8 @@
     </head>
 
     <body>
-        <h1>Security Camera Streaming</title>
+        <h1>Security Camera Streaming</title><br>
         <img src="{{ url_for('video_feed') }}">
-
     <form action="/control" method="POST">
         <input type="radio" name="alerts" value="Alerts"> Alerts<br> 
         <input type="radio" name="alerts" value="No Alerts" checked> No Alerts<br> 
